--- a/theRay0.0/View/Base.lproj/Main.storyboard
+++ b/theRay0.0/View/Base.lproj/Main.storyboard
@@ -380,10 +380,6 @@
                                 <rect key="frame" x="0.0" y="20" width="414" height="56"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
-                                <scopeButtonTitles>
-                                    <string>scope</string>
-                                    <string>fdfe</string>
-                                </scopeButtonTitles>
                                 <connections>
                                     <outlet property="delegate" destination="DGx-hz-6lv" id="Dp5-BV-ppz"/>
                                 </connections>
@@ -415,11 +411,47 @@
                     <connections>
                         <outlet property="searchBar" destination="t24-v9-Ryb" id="MwJ-CB-PN4"/>
                         <outlet property="searchTable" destination="hjA-J6-zs6" id="Tud-CO-exg"/>
+                        <segue destination="LVw-VG-iqm" kind="show" identifier="toStudDetail" id="VdL-tW-U0e"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mNs-aZ-iQf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1281" y="788"/>
+        </scene>
+        <!--Student DetailVC-->
+        <scene sceneID="hga-xc-Eff">
+            <objects>
+                <viewController id="LVw-VG-iqm" customClass="StudentDetailVC" customModule="theRay0_0" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ymz-1A-EgO">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Hhr-Eo-EaM">
+                                <rect key="frame" x="20" y="20" width="130" height="130"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Student Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D1G-6M-L78">
+                                <rect key="frame" x="158" y="20" width="236" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Class" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ruj-Hm-BiS">
+                                <rect key="frame" x="158" y="113" width="236" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="uei-LP-8V8"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="S5b-Oh-Mj9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1279.7101449275362" y="1536.6847826086957"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="mOV-bR-Pcq">
